[gd_scene load_steps=13 format=3 uid="uid://dkf4vxad1qkwq"]

[ext_resource type="Script" path="res://world.gd" id="1_ylu0c"]
[ext_resource type="Texture2D" uid="uid://ci6ubyce2454f" path="res://9_replace.png" id="2_8cdmu"]
[ext_resource type="TileSet" uid="uid://d1orfdn1al2h5" path="res://terrain_tiles.tres" id="3_llnyu"]
[ext_resource type="PackedScene" path="res://entity/Player.tscn" id="4_j2ufw"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_kfl0w"]
frequency = 0.008
fractal_lacunarity = 1.8
fractal_gain = 0.3

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_surd4"]
noise = SubResource("FastNoiseLite_kfl0w")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_ht7fa"]
frequency = 0.005

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_6q74v"]
noise = SubResource("FastNoiseLite_ht7fa")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_liw8f"]
noise_type = 3
fractal_octaves = 6
fractal_lacunarity = 4.0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_3najo"]
noise = SubResource("FastNoiseLite_liw8f")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_k6ef1"]
texture = ExtResource("2_8cdmu")
texture_region_size = Vector2i(288, 144)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_hiw71"]
tile_shape = 1
tile_layout = 5
tile_offset_axis = 1
tile_size = Vector2i(288, 144)
custom_data_layer_0/name = "floor"
custom_data_layer_0/type = 2
sources/4 = SubResource("TileSetAtlasSource_k6ef1")

[node name="world" type="Node2D"]
y_sort_enabled = true
texture_filter = 1
script = ExtResource("1_ylu0c")
MOUNTAIN_START = 0.975

[node name="NoiseMaps" type="Node2D" parent="."]
position = Vector2(256, -256)

[node name="AltitudeNoise" type="Sprite2D" parent="NoiseMaps"]
texture = SubResource("NoiseTexture2D_surd4")

[node name="TemperatureNoise" type="Sprite2D" parent="NoiseMaps"]
texture = SubResource("NoiseTexture2D_6q74v")
offset = Vector2(512, 0)
region_rect = Rect2(512, 0, 512, 512)

[node name="MoistureNoise" type="Sprite2D" parent="NoiseMaps"]
position = Vector2(1024, 0)
texture = SubResource("NoiseTexture2D_3najo")

[node name="ReplacerMap" type="TileMap" parent="."]
y_sort_enabled = true
tile_set = SubResource("TileSet_hiw71")
format = 2
layer_0/tile_data = PackedInt32Array(0, 4, 0, 1, 4, 0, 65537, 4, 0, 65538, 4, 0, 65539, 4, 0, 65540, 4, 0, 65541, 4, 0, 65542, 4, 0, 65543, 4, 0, 65544, 4, 0, 131080, 4, 0, 131081, 4, 0, 65545, 4, 0, 65546, 4, 0, 131082, 4, 0, 131083, 4, 0, 131084, 4, 0, 131085, 4, 0, 196621, 4, 0, 196622, 4, 0, 262158, 4, 0, 262159, 4, 0, 262160, 4, 0, 262161, 4, 0, 262162, 4, 0, 262163, 4, 0, 327700, 4, 0, 327701, 4, 0, 327702, 4, 0, 393239, 4, 0, 393240, 4, 0, 393241, 4, 0, 393242, 4, 0, 393238, 4, 0, 262164, 4, 0, 262166, 4, 0, 262165, 4, 0, 196626, 4, 0, 196627, 4, 0, 196628, 4, 0, 196625, 4, 0, 196624, 4, 0, 131088, 4, 0, 131089, 4, 0, 65553, 4, 0, 65554, 4, 0, 131087, 4, 0, 196623, 4, 0, 327699, 4, 0, 327698, 4, 0, 327697, 4, 0, 327696, 4, 0, 327695, 4, 0, 327694, 4, 0, 327693, 4, 0, 393233, 4, 0, 393234, 4, 0, 393235, 4, 0, 458771, 4, 0, 458770, 4, 0, 458769, 4, 0, 458768, 4, 0, 458767, 4, 0, 524303, 4, 0, 589839, 4, 0, 655375, 4, 0, 720912, 4, 0, 786448, 4, 0, 851984, 4, 0, 851983, 4, 0, 851982, 4, 0, 917521, 4, 0, 917522, 4, 0, 917523, 4, 0, 917520, 4, 0, 917524, 4, 0, 917519, 4, 0, 983056, 4, 0, 983057, 4, 0, 983058, 4, 0, 1048595, 4, 0, 1048596, 4, 0, 1048597, 4, 0, 983059, 4, 0, 786446, 4, 0, 786447, 4, 0, 786449, 4, 0, 786450, 4, 0, 851986, 4, 0, 851987, 4, 0, 720913, 4, 0, 720911, 4, 0, 655374, 4, 0, 851985, 4, 0, 786451, 4, 0, 720915, 4, 0, 720914, 4, 0, 655377, 4, 0, 655376, 4, 0, 655378, 4, 0, 589840, 4, 0, 589841, 4, 0, 589842, 4, 0, 524305, 4, 0, 524304, 4, 0, 393232, 4, 0, 393231, 4, 0, 131086, 4, 0, 65549, 4, 0, 65548, 4, 0, 196620, 4, 0, 262157, 4, 0, 262156, 4, 0, 262155, 4, 0, 196619, 4, 0, 196618, 4, 0, 262154, 4, 0, 262153, 4, 0, 196617, 4, 0, 196616, 4, 0, 196615, 4, 0, 131079, 4, 0, 131078, 4, 0, 131077, 4, 0, 131076, 4, 0, 131075, 4, 0, 131073, 4, 0, 131074, 4, 0, 65547, 4, 0, 65550, 4, 0, 65551, 4, 0, 65552, 4, 0, 131090, 4, 0, 131091, 4, 0, 196629, 4, 0, 262167, 4, 0, 327704, 4, 0, 327703, 4, 0, 327705, 4, 0, 327706, 4, 0, 327707, 4, 0, 393244, 4, 0, 393245, 4, 0, 393246, 4, 0, 327708, 4, 0, 393243, 4, 0, 458778, 4, 0, 458779, 4, 0, 458780, 4, 0, 458781, 4, 0, 458782, 4, 0, 458783, 4, 0, 458784, 4, 0, 458785, 4, 0, 983060, 4, 0, 1114133, 4, 0, 1114134, 4, 0, 1179670, 4, 0, 1245207, 4, 0, 1310744, 4, 0, 1376281, 4, 0, 1441818, 4, 0, 1507354, 4, 0, 1572891, 4, 0, 1572892, 4, 0, 1572893, 4, 0, 1572894, 4, 0, 1572890, 4, 0, 1507353, 4, 0, 1507352, 4, 0, 1441815, 4, 0, 1376279, 4, 0, 1310743, 4, 0, 1114132, 4, 0, 1179669, 4, 0, 1376280, 4, 0, 1507355, 4, 0, 1441817, 4, 0, 1245206, 4, 0, 1638428, 4, 0, 1703965, 4, 0, 1638427, 4, 0, 1441816, 4, 0, 1638429, 4, 0, 1703966, 4, 0, 1703967, 4, 0, 1638431, 4, 0, 1638430, 4, 0, 1638426, 4, 0, 1703964, 4, 0, 655393, 4, 0, 589857, 4, 0, 589856, 4, 0, 524319, 4, 0, 524318, 4, 0, 524320, 4, 0, 524321, 4, 0, 589855, 4, 0, 589858, 4, 0, 524317, 4, 0, 589853, 4, 0, 589854, 4, 0, 262152, 4, 0, 196614, 4, 0, 196613, 4, 0, 262150, 4, 0, 262151, 4, 0, 327688, 4, 0, 196612, 4, 0, 327691, 4, 0, 327692, 4, 0, 393229, 4, 0, 393228, 4, 0, 327690, 4, 0, 327689, 4, 0, 458765, 4, 0, 393227, 4, 0, 393230, 4, 0, 458766, 4, 0, 524302, 4, 0, 524301, 4, 0, 458764, 4, 0, 589838, 4, 0, 524300, 4, 0, 65555, 4, 0, 655392, 4, 0, 720929, 4, 0, 720930, 4, 0, 786467, 4, 0, 720931, 4, 0, 720932, 4, 0, 655395, 4, 0, 655394, 4, 0, 589859, 4, 0, 655396, 4, 0, 655397, 4, 0, 720934, 4, 0, 720935, 4, 0, 786470, 4, 0, 786469, 4, 0, 786468, 4, 0, 852005, 4, 0, 852006, 4, 0, 852007, 4, 0, 786471, 4, 0, 655398, 4, 0, 720933, 4, 0, 917542, 4, 0, 852008, 4, 0, 852009, 4, 0, 917545, 4, 0, 917544, 4, 0, 917543, 4, 0, 983079, 4, 0, 983078, 4, 0, 917541, 4, 0, 983080, 4, 0, 1048617, 4, 0, 1048618, 4, 0, 1048619, 4, 0, 1114155, 4, 0, 1114153, 4, 0, 1114154, 4, 0, 1179692, 4, 0, 983082, 4, 0, 983081, 4, 0, 983083, 4, 0, 1048616, 4, 0, 1114152, 4, 0, 1179689, 4, 0, 1179690, 4, 0, 1245226, 4, 0, 1245227, 4, 0, 1245228, 4, 0, 1114156, 4, 0, 1179693, 4, 0, 1179691, 4, 0, 1245229, 4, 0, 1310766, 4, 0, 1310767, 4, 0, 1310765, 4, 0, 1310764, 4, 0, 1376302, 4, 0, 1376303, 4, 0, 1376304, 4, 0, 1245225, 4, 0, 1376300, 4, 0, 1441837, 4, 0, 1441838, 4, 0, 1507375, 4, 0, 1507376, 4, 0, 1507377, 4, 0, 1507374, 4, 0, 1441836, 4, 0, 1572912, 4, 0, 1441839, 4, 0, 1376301, 4, 0, 1441840, 4, 0, 1441841, 4, 0, 1441842, 4, 0, 1507378, 4, 0, 1572913, 4, 0, 1638448, 4, 0, 1638447, 4, 0, 1638449, 4, 0, 1638450, 4, 0, 1572911, 4, 0, 1572914, 4, 0, 1245230, 4, 0, 1048620, 4, 0, 917547, 4, 0, 917546, 4, 0, 852010, 4, 0, 786473, 4, 0, 720936, 4, 0, 655399, 4, 0, 589861, 4, 0, 524324, 4, 0, 524323, 4, 0, 524322, 4, 0, 589860, 4, 0, 786472, 4, 0, 589862, 4, 0, 458786, 4, 0, 393249, 4, 0, 393248, 4, 0, 327711, 4, 0, 327710, 4, 0, 262174, 4, 0, 262173, 4, 0, 393247, 4, 0, 327709, 4, 0, 1048594, 4, 0, 1114131, 4, 0, 1179668, 4, 0, 1245205, 4, 0, 1310742, 4, 0, 1572915, 4, 0, 1638452, 4, 0, 1638453, 4, 0, 1703990, 4, 0, 1703991, 4, 0, 1769527, 4, 0, 1769528, 4, 0, 1769529, 4, 0, 1835066, 4, 0, 1835067, 4, 0, 1900603, 4, 0, 1900602, 4, 0, 1966138, 4, 0, 1966137, 4, 0, 2031673, 4, 0, 1966136, 4, 0, 1900599, 4, 0, 1835063, 4, 0, 1835062, 4, 0, 1769525, 4, 0, 1703988, 4, 0, 1638451, 4, 0, 1703989, 4, 0, 1769526, 4, 0, 1835064, 4, 0, 1900601, 4, 0, 1835065, 4, 0, 1966139, 4, 0, 1966140, 4, 0, 2031676, 4, 0, 2031677, 4, 0, 1900600, 4, 0, 2031674, 4, 0, 2097211, 4, 0, 2097212, 4, 0, 2162748, 4, 0, 2162749, 4, 0, 2031675, 4, 0, 2097210, 4, 0, 1966135, 4, 0, 1900598, 4, 0, 1835061, 4, 0, 1769524, 4, 0, 1703987, 4, 0, 2162747, 4, 0, 2097209, 4, 0, 2031672, 4, 0, 1966134, 4, 0, 1900597, 4, 0, 1835060, 4, 0, 1769523, 4, 0, 1769522, 4, 0, 1703985, 4, 0, 1835059, 4, 0, 1900596, 4, 0, 1966133, 4, 0, 2031671, 4, 0, 2097208, 4, 0, 2162745, 4, 0, 2228282, 4, 0, 2293819, 4, 0, 2293820, 4, 0, 2359357, 4, 0, 2293821, 4, 0, 2228284, 4, 0, 1703986, 4, 0, 131092, 4, 0, 65556, 4, 0, 65557, 4, 0, 65558, 4, 0, 131094, 4, 0, 131095, 4, 0, 65559, 4, 0, 65560, 4, 0, 131096, 4, 0, 131097, 4, 0, 131098, 4, 0, 131099, 4, 0, 196636, 4, 0, 196635, 4, 0, 196631, 4, 0, 196632, 4, 0, 196633, 4, 0, 262169, 4, 0, 196630, 4, 0, 131093, 4, 0, 262168, 4, 0, 262170, 4, 0, 262171, 4, 0, 262172, 4, 0, 196634, 4, 0, 2162746, 4, 0, 2228283, 4, 0, 2424894, 4, 0, 2490431, 4, 0, 2555968, 4, 0, 2621505, 4, 0, 2687042, 4, 0, 2752579, 4, 0, 2818116, 4, 0, 2883653, 4, 0, 2949190, 4, 0, 3014727, 4, 0, 3080264, 4, 0, 3080265, 4, 0, 3145802, 4, 0, 3211339, 4, 0, 3276876, 4, 0, 3014728, 4, 0, 2949192, 4, 0, 2883655, 4, 0, 2818118, 4, 0, 2752581, 4, 0, 2687044, 4, 0, 2621507, 4, 0, 2555970, 4, 0, 2490433, 4, 0, 2424896, 4, 0, 2359359, 4, 0, 2359358, 4, 0, 2228285, 4, 0, 2293822, 4, 0, 2818119, 4, 0, 2883656, 4, 0, 2818117, 4, 0, 2752580, 4, 0, 2687043, 4, 0, 2621506, 4, 0, 2424895, 4, 0, 2490432, 4, 0, 2555969, 4, 0, 3014729, 4, 0, 3080266, 4, 0, 3080267, 4, 0, 3145803, 4, 0, 3145804, 4, 0, 3211340, 4, 0, 3014730, 4, 0, 2949193, 4, 0, 2752582, 4, 0, 2687045, 4, 0, 2621508, 4, 0, 2555971, 4, 0, 2490434, 4, 0, 2424897, 4, 0, 2359361, 4, 0, 2883654, 4, 0, 3080263, 4, 0, 2949191, 4, 0, 3014726, 4, 0, 2949189, 4, 0, 2883652, 4, 0, 2883651, 4, 0, 2949188, 4, 0, 3014725, 4, 0, 2687041, 4, 0, 2752578, 4, 0, 2818115, 4, 0, 2818120, 4, 0, 2752583, 4, 0, 2687046, 4, 0, 2621509, 4, 0, 2555973, 4, 0, 2490436, 4, 0, 2424899, 4, 0, 2359363, 4, 0, 2293826, 4, 0, 2228289, 4, 0, 2162753, 4, 0, 2097216, 4, 0, 2031679, 4, 0, 1966143, 4, 0, 1900606, 4, 0, 1835069, 4, 0, 1769533, 4, 0, 1769532, 4, 0, 1703996, 4, 0, 1835068, 4, 0, 1966142, 4, 0, 2031680, 4, 0, 2097217, 4, 0, 1900605, 4, 0, 1900604, 4, 0, 1966141, 4, 0, 2031678, 4, 0, 2162754, 4, 0, 2162755, 4, 0, 2228292, 4, 0, 2293829, 4, 0, 2359366, 4, 0, 2424903, 4, 0, 2490440, 4, 0, 2555977, 4, 0, 2621513, 4, 0, 2687050, 4, 0, 2752586, 4, 0, 2818122, 4, 0, 2883658, 4, 0, 2949194, 4, 0, 2228287, 4, 0, 2162751, 4, 0, 2162750, 4, 0, 2293824, 4, 0, 2424898, 4, 0, 2359360, 4, 0, 2293823, 4, 0, 2228286, 4, 0, 2097213, 4, 0, 2097214, 4, 0, 2228288, 4, 0, 2293825, 4, 0, 2162752, 4, 0, 2097215, 4, 0, 2228290, 4, 0, 2490437, 4, 0, 2555974, 4, 0, 2424900, 4, 0, 2359362, 4, 0, 2621510, 4, 0, 2490435, 4, 0, 2687047, 4, 0, 2818121, 4, 0, 2883657, 4, 0, 2555972, 4, 0, 2621511, 4, 0, 2293827, 4, 0, 2359364, 4, 0, 2359365, 4, 0, 2424901, 4, 0, 2293828, 4, 0, 2228291, 4, 0, 2424902, 4, 0, 2490439, 4, 0, 2555976, 4, 0, 2621512, 4, 0, 2687049, 4, 0, 2752585, 4, 0, 2818123, 4, 0, 2883659, 4, 0, 2687048, 4, 0, 2555975, 4, 0, 2490438, 4, 0, 2752584, 4, 0)

[node name="TerrainMap" type="TileMap" parent="."]
y_sort_enabled = true
tile_set = ExtResource("3_llnyu")
format = 2
layer_0/y_sort_enabled = true

[node name="Player" parent="." instance=ExtResource("4_j2ufw")]

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
zoom = Vector2(2, 2)
